# zoopipe

./: .gitignore  .pre-commit-config.yaml  .rayignore  .readthedocs.yaml  Cargo.toml  README.md  build.sh  docker-compose.yml  docs-requirements.txt  errors.csv  example_hooks.py  example_json.py  generate_csv_data.py  lint.sh  local.env  mkdocs.yml  output.csv  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: zoopipe_benchmarks.rs
docs/: RFC.md  adapters.md  arrow.md  cloud-storage.md  coordinators.md  csv.md  dask.md  delta.md  duckdb.md  examples.md  excel.md  executors.md  getting-started.md  hooks.md  iceberg.md  index.md  json.md  kafka.md  parquet.md  pipemanager.md  ray.md  sql.md  zooparallel.md  zoosync.md
docs/ADR/: ADR-000-architectural-decision-records.md  ADR-001-hybrid-python-rust-architecture.md  ADR-002-batch-based-pipeline-processing.md  ADR-003-pluggable-adapter-system.md  ADR-004-lifecycle-hooks.md  ADR-005-pydantic-validation.md  ADR-006-multi-process-parallelism.md  ADR-007-error-routing.md  ADR-008-unified-io-abstraction.md  ADR-009-shared-memory-ipc.md
docs/adapters/: arrow-input.md  arrow-output.md  csv-input.md  csv-output.md  custom-adapters.md  duckdb-input.md  duckdb-output.md  file-partitioner.md  generator-output.md  hooks.md  json-input.md  json-output.md  memory-output.md  sqlalchemy-input.md  sqlalchemy-output.md
examples/: 01_basic_csv.py  02_jsonl_to_csv.py  02_multiprocessing.py  03_executor_comparison.py  03_ray_executor.py  04_csv_to_duckdb.py  04_json_processing.py  05_duckdb_to_jsonl.py  05_hooks.py  06_csv_to_arrow.py  06_dummy_output_with_hooks.py  06_sqlite_output_hook.py  07_arrow_to_jsonl.py  07_distributed_file_reading.py  08_csv_to_sql.py  08_file_partitioning.py  09_async_queues.py  09_sql_to_jsonl.py  10_csv_to_generator.py  10_sync_queues.py  11_csv_to_parquet.py  11_handling_errors.py  12_no_pydantic.py  12_parquet_to_jsonl.py  12_threads_io_bound.py  13_no_output_adapter.py  13_pipemanager.py  13_pyarrow_adapter.py  14_adapter_hooks_fetching.py  14_basic_excel.py  15_csv_to_excel.py  15_kafka_adapter.py  15_sqlalchemy_jit.py  16_duckdb_jit.py  16_kafka_adapter.py  17_asyncio_executor.py  17_cursor_pagination.py  18_boto3_s3_mocked.py  18_s3_to_parquet.py  19_minio_s3_mocked.py  (+11 more)
examples/data/: large_data.jsonl  no_pydantic.json  sample_data.csv  sample_data.duckdb  sample_data.json  sample_data.jsonl  sample_users.parquet
examples/scripts/: generate_duckdb_data.py
src/flowschema/: __init__.py  core.py  exceptions.py  logger.py  report.py  utils.py
src/flowschema/executor/: __init__.py  base.py  dask.py  (+4 more)
src/schemaflow/: core.py
src/zoopipe/: __init__.py  core.py  manager.py  pipe.py  protocols.py  report.py  structs.py  types.py  utils.py  zoopipe_rust_core.pyi
tests/: test_adapter_hooks.py  test_arrow.py  test_async_queue.py  test_background_run.py  test_binary_compression.py  test_boto3_adapters.py  test_core.py  test_csv.py  test_custom_id_generator.py  test_dask.py  test_dask_engine.py  test_dask_streaming.py  test_delta.py  test_duckdb.py  test_duckdb_adapters.py  test_dummy_output.py  test_engines.py  test_excel.py  test_hook_errors.py  test_hooks.py  test_integration.py  test_json_input.py  test_json_output.py  test_kafka_adapter.py  test_minio_adapters.py  test_multiprocessing.py  test_native_parallel.py  test_new_features.py  test_no_pydantic.py  test_output_csv.py  test_parquet.py  test_pipemanager.py  test_priority.py  test_process_control.py  test_pyarrow_adapter.py  test_pygen.py  test_ray.py  test_ray_engine.py  test_report.py  test_s3_parsing.py  (+11 more)
tests/integrations/: benchmark_copy_direct.py  benchmark_e2e_multi_stage.py  benchmark_huge_csv.py  benchmark_kafka.py  benchmark_postgres.py  benchmark_s3.py  benchmark_s3_arrow_duckdb.py  benchmark_s3_parquet_duckdb.py  test_kafka_integration.py  test_postgres.py  test_s3_compression.py  test_s3_integration.py
(+136 files in other folders)
