[package]
name = "zoopipe_rust_core"
version = "2026.1.12"
edition = "2024"

[lib]
name = "zoopipe_rust_core"
path = "src/zoopipe_core/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py310"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
