[project]
name = "flowschema"
version = "2026.01.09"
description = "FlowSchema is a data processing framework that allows you to process data in a declarative way."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask[distributed]>=2025.12.0",
    "ijson>=3.4.0",
    "lz4>=4.4.5",
    "msgpack>=1.1.2",
    "pydantic>=2.12.5",
    "ray>=2.53.0",
]

authors = [
    { name = "Alberto Daniel Badia", email = "alberto_badia@enlacepatagonia.com" },
]

urls = {"Homepage" = "https://github.com/albertobadia/flowschema"}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
