[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "zoopipe"
dynamic = ["version"]
description = "ZooPipe is a data processing framework that allows you to process data in a declarative way."
readme = "README.md"
requires-python = ">=3.10,<3.14"

authors = [
    { name = "Alberto Daniel Badia", email = "alberto_badia@enlacepatagonia.com" },
]

urls = {"Homepage" = "https://github.com/albertobadia/zoopipe"}

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
ray = ["ray>=2.53.0"]
dask = ["dask[distributed]>=2026.1.1"]
zoosyncmp = ["zoosyncmp>=2026.1.24"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "faker>=40.1.0",
    "maturin>=1.11.5",
    "ray>=2.53.0",
    "dask[distributed]>=2026.1.1",
    "zoosyncmp>=2026.1.24",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]

[tool.maturin]
python-source = "src"
module-name = "zoopipe.zoopipe_rust_core"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--ignore=tests/integrations"

[tool.ruff.lint]
select = ["E", "F", "I"]
